--- a/package.json
+++ b/package.json
@@ -5,25 +5,27 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev":"nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js",
+    "test": "mocha --exit"
   },
   "author": "Michael Peterson",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "chai": "^4.1.2",
-    "chai-http": "^4.2.0",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
-    "mocha": "^5.2.0",
     "mongoose": "^5.2.13",
     "morgan": "^1.9.0",
     "node": "^10.9.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.0",
+    "mocha": "^5.2.0"
   }
 }
