--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "node": "^10.9.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "swearjar": "^0.2.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
